<resources>
    <string name="app_name">RxHttp</string>

    <string name="mvvm_demo">MVVM架构使用RxHttp示例(kotlin)</string>
    <string name="mvc_demo">MVC架构使用RxHttp示例(kotlin)</string>
    <string name="zhihu_demo">知乎日报API(kotlin)</string>
    <string name="zhihu_demo_java">知乎日报API(java)</string>
    <string name="glide_demo">Glide和网络请求公用OkHttpClient</string>

    <string name="zhihu_api_latest">最新文章</string>

    <string name="http_get">GET请求</string>
    <string name="http_post">POST请求</string>
    <string name="http_post_form">POST FORM请求</string>
    <string name="http_put">PUT请求</string>
    <string name="http_delete">DELETE请求</string>
    <string name="upload">上传(需要和后台服务端协作)</string>
    <string name="download">下载</string>

    <string name="permission_dialog_title">权限申请</string>
    <string name="permission_dialog_ok">确定</string>
    <string name="permission_dialog_cancel">取消</string>
    <string name="permission_dialog_message">%1$s需要%2$s权限，去设置?</string>

    <string name="download_progress">下载进度:%d%%</string>
    <string name="download_failed">下载失败</string>
    <string name="download_success">下载完成</string>

    <string name="log_tip">亲，可在Logcat查看输出日志，搜索关键字OkHttp即可，响应数据为模拟数据，通过添加拦截器MockInterceptor模拟服务器返回数据，
        此处假设服务器返回的数据格式为{"code":200,"data":T,"msg":\" \"}，code为响应码，data对应的数据类型为泛型，基本数据类型(boolean，int，double...)，String，{ }，[ ]都是支持的</string>
    <string name="log_tip_2">亲,可在Logcat查看输出日志,搜索关键字OkHttp即可</string>
</resources>
